--- a/docs/assets/stylesheets/fonts.css
+++ b/docs/assets/stylesheets/fonts.css
@@ -2,6 +2,17 @@
 @import url("https://static.zeoseven.com/zsft/292/main/result.css");
 
 @font-face {
+  font-family: "JetBrains Mono Only English";
+  src: url("../fonts/JetBrainsMono-Regular.woff2") format("woff2");
+  /* 英文、数字和常用符号范围 */
+  unicode-range: U+0061-007A, U+0041-005A, U+0030-0039, U+002E, U+002C, U+0021,
+    U+003F, U+003A, U+003B, U+002D;
+  font-display: swap;
+  /* 禁用连字 */
+  font-variant-ligatures: none;
+}
+
+@font-face {
   font-family: "JetBrains Mono";
   src: url("../fonts/JetBrainsMono-Regular.woff2") format("woff2");
   font-display: swap;
@@ -10,6 +21,6 @@
 }
 
 :root {
-  --md-text-font: "JetBrains Mono";
+  --md-text-font: "JetBrains Mono Only English", "LXGW WenKai";
   --md-code-font: "JetBrains Mono";
 }
